# illuminanced

./: Cargo.toml  illuminanced.conf  illuminanced.service  install.sh
src/: config.rs  discrete_value.rs  kalman.rs  main.rs  smoother.rs
