[package]
name = "illuminanced"
version = "0.1.1"
authors = ["Mikhail Modin <mikhailm1@gmail.com>"]
edition = "2021"
description = "A user-space daemon that automatically adjusts screen brightness based on light sensor readings."
repository = "https://github.com/rrudolf98/illuminanced"
homepage = "https://github.com/mikhail-m1/illuminanced"

[dependencies]
daemonize = "0.5"
#daemonize = { path = "../daemonize" }
syslog = "6.1"
log = "0.4"
simplelog ="0.12"
getopts = "0.2"
toml="0.8"
glob = "0.3"
libc = "0.2"
